# hermes-vocal-

./: .gitignore  CMakeLists.txt  README.md  client.cpp  server  server.cpp
core/: Skill.cpp  Skill.hpp  core.cpp  core.hpp
